tests/compile-fail/lexer/names/leading_underscore.stderr
error: Invalid token
  ┌─ $DD/tests/compile-fail/lexer/names/leading_underscore.sk:1:4
  │
1 │ fn _hidden(){}
  │    ^

